# memcp

./: .gitignore  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  docker-compose.yml  engram-analysis.html  engram-analysis.md  justfile  memcp.toml  memcp.toml.example
crates/memcp/: Cargo.toml
crates/memcp-core/: Cargo.toml
crates/memcp-core/contrib/launchd/: com.memcp.daemon.plist
crates/memcp-core/contrib/systemd/: memcp-daemon.service
crates/memcp-core/migrations/: 008_add_provenance_columns.sql  009_daemon_status.sql  011_sidecar_status.sql  014_session_recalls.sql  015_memory_chunks.sql  016_curation.sql  017_embedding_tiers.sql  018_plugin_primitives.sql  019_session_tags.sql  020_rename_workspace_to_project.sql  021_provenance_trust.sql  022_write_path.sql  023_tiered_content.sql  024_knowledge_graph.sql  025_contradiction_detection.sql  026_knowledge_tiers.sql  027_add_reply_to_id.sql  028_drop_chunks.sql  029_salience_audit_log.sql
crates/memcp-core/src/: cli.rs  config.rs  daemon.rs  errors.rs  lib.rs  logging.rs  validation.rs
crates/memcp-core/src/auto_store/: watcher.rs
crates/memcp-core/src/benchmark/: dataset.rs  evaluate.rs  ingest.rs  mod.rs  prompts.rs  report.rs  runner.rs
crates/memcp-core/src/content_filter/: mod.rs  regex_filter.rs  semantic_filter.rs
crates/memcp-core/src/graph/: mod.rs  types.rs
crates/memcp-core/src/import/: batch.rs  chatgpt.rs  checkpoint.rs  claude_ai.rs  claude_code.rs  curate.rs  dedup.rs  history.rs  jsonl.rs  markdown.rs  mod.rs  noise.rs  openclaw.rs  security.rs
crates/memcp-core/src/intelligence/: mod.rs
crates/memcp-core/src/load_test/: client.rs  corpus.rs  metrics.rs  mod.rs  report.rs  trust.rs
crates/memcp-core/src/pipeline/: mod.rs
crates/memcp-core/src/storage/: mod.rs
crates/memcp-core/src/summarization/: ollama.rs
crates/memcp-core/src/transport/: boot_safety.rs  daemon.rs  ipc.rs  metrics.rs  (+2 more)
crates/memcp-core/tests/: abstraction_pipeline_test.rs  api_test.rs  auto_store_e2e.rs  chunk_removal_test.rs  consolidation_similarity_test.rs  curation_security_test.rs  discover_test.rs  embedding_pipeline_test.rs  error_sanitization_test.rs  feedback_test.rs  gc_dedup_test.rs  import_discover_test.rs  import_security_test.rs  import_test.rs  ingest_test.rs  input_validation_test.rs  integration_test.rs  journey_test.rs  knowledge_tiers_test.rs  mcp_contract.rs  memory_span_test.rs  metrics_test.rs  provenance_test.rs  rate_limit_test.rs  reasoning_budget.rs  reasoning_byok_boundary.rs  reasoning_kimi.rs  reasoning_loop_test.rs  reasoning_ollama.rs  reasoning_openai.rs  reasoning_salience.rs  reasoning_termination.rs  reasoning_tool_dispatch.rs  reasoning_tools_test.rs  reasoning_trait_test.rs  recall_test.rs  redaction_integration.rs  resolve_id_prefix_test.rs  search_quality.rs  source_audit_test.rs  (+6 more)
crates/memcp/src/: main.rs
(+462 files in other folders)
