[workspace]
members = ["crates/memcp-core", "crates/memcp"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Bug-catchers
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
future_not_send = "warn"
large_futures = "warn"
await_holding_lock = "deny"
unwrap_used = "warn"
indexing_slicing = "warn"

# Useful pedantic subset
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
