[package]
name = "memcp-core"
version = "0.1.0"
edition = "2021"
description = "High-performance MCP memory server — core library"

[lib]
name = "memcp"
path = "src/lib.rs"

[features]
default = ["local-embed"]
local-embed = ["dep:fastembed"]
# Phase 07.5 Wave 0 test stubs — enable when apply_feedback and hybrid_search_paged exist
wave0_07_5 = []
# Phase 07.7 Wave 0 test stubs — enable when idempotency implementation ships (Task 2)
wave0_07_7 = []

[dependencies]
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
anyhow = "1"
figment = { version = "0.10", features = ["toml", "env"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "migrate"] }
clap = { version = "4", features = ["derive", "env"] }
async-trait = "0.1"
base64 = "0.22"
dirs = "6"
fastembed = { version = "5", optional = true }
pgvector = { version = "0.4", features = ["sqlx"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
indicatif = "0.17"
notify = "7"
axum = "0.8"
unicode-segmentation = "1.11"

[dev-dependencies]
tempfile = "3"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
required-features = ["local-embed"]
